test/14_error_undefined_variable.xeno
function main(): void {
    print(x); // error
}
